<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#cc000000"
    tools:context="com.example.hindahmed.mymoney.MainActivity_Tab_">
<TextView
    android:id="@+id/title1_0_tab1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title1_0_tab1"
    android:gravity="center"
    android:layout_centerHorizontal="false"
    android:layout_centerInParent="false"
    android:layout_centerVertical="false"
    android:layout_marginTop="100dp"
    android:textColor="@android:color/white"
    android:textSize="@dimen/title_font"
    android:paddingTop="50dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1_1_tab1"
        android:gravity="center"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_centerVertical="false"
        android:layout_below="@+id/title1_0_tab1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_font"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title2_tab1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_font"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp" />
</RelativeLayout>
