<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#cc000000"
    tools:context="com.example.hindahmed.mymoney.MainActivity_Tab_">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mobiile"
        android:id="@+id/imageView"
        android:rotation="90"
        android:layout_alignParentRight="false"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1_0_tab7"
        android:textSize="@dimen/big_font"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="100dp"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1_1_tab7"
        android:textSize="@dimen/big_font"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:textAlignment="center"
        android:layout_below="@+id/text"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="100dp"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2_1_tab2"
                android:textSize="25dp"
                android:textColor="@android:color/white"
                android:layout_marginTop="15dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hand"
                android:id="@+id/imageView2"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2_0_tab7"
            android:textSize="@dimen/big_font"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="right" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2_1_tab7"
            android:textSize="@dimen/big_font"
            android:textColor="@android:color/white"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

</RelativeLayout>
